--- a/projeto/abala.html
+++ b/projeto/abala.html
@@ -40,6 +40,9 @@
             </div>
         </ul>
     </section>
+        <footer>
+            <h3>Feito Por Andre Garros</h3>
+        </footer>
 
     
 </body>
