--- a/projeto/abala.html
+++ b/projeto/abala.html
@@ -44,7 +44,7 @@
         </ul>
     </section>
         <footer>
-            <h3>Feito Por Andre Garros</h3><br>
+            <h3>&copy; Andre Garros</h3>
         </footer>
 
     
