--- a/projeto/abala.html
+++ b/projeto/abala.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img id="perfil" src="imagens/igcdn.jpg" alt="aa"><br>
+        <img id="perfil" src="imagens/icone abala.jpeg" alt="aa"><br>
 
         <a href="https://www.instagram.com/abalaitaquibacanga/" target="_blank"><img id="icone" src="imagens/instagram ico.png" alt=""></a>
 
@@ -46,7 +46,5 @@
         <footer>
             <h3>&copy; Andre Garros</h3>
         </footer>
-
-    
 </body>
 </html>
