--- a/projeto/abala.html
+++ b/projeto/abala.html
@@ -10,14 +10,14 @@
     <header>
         <img id="perfil" src="imagens/icone abala.jpeg" alt="aa"><br>
 
-        <a href="https://www.instagram.com/abalaitaquibacanga/" target="_blank"><img id="icone" src="imagens/instagram ico.png" alt=""></a>
+        <a href="https://www.instagram.com/abalaitaquibacanga/" target="_blank"><img id="icone" src="imagens/instagram p.png" alt=""></a>
 
-        <a href="a"><img id="icone" src="imagens/facebook (4).png" alt=""></a>
+        <a href="a"><img id="icone" src="imagens/facebook b.png" alt=""></a>
 
-        <img id="icone" src="imagens/youtube (1).png" alt="">
+        <img id="icone" src="imagens/youtube b.png" alt="">
 
         <a href="aa">
-            <img id="icone" src="imagens/e-mail.png" alt="">
+            <img id="icone" src="imagens/e-mail p.png" alt="">
             
         </a>
     </header>
